# csv-editor

./: .gitignore  .pre-commit-config.yaml  ALTERNATIVE_PUBLISHING.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_CONFIG.md  PUBLISHING.md  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  github-optimization.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  publish-github.yml  publish.yml  test.yml
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/docs/: installation.md  intro.md
docs/docs/api/: overview.md
docs/docs/tutorials/: quickstart.md
examples/: README.md  auto_save_demo.py  auto_save_overwrite.py  basic_usage.py  claude_code_null_example.py  demo.py  history_demo.py  test_default_autosave.py  update_consignee_example.py
plans/: 2026-04-19-fastmcp3-migration-plan.md
scripts/: publish.py
specs/: 2026-04-19-fastmcp3-migration-design.md
src/csv_editor/: __init__.py  instructions.md  server.py
src/csv_editor/models/: __init__.py  auto_save.py  csv_session.py  data_models.py  history_manager.py
src/csv_editor/prompts/: data_prompts.py
src/csv_editor/resources/: csv_resources.py
src/csv_editor/tools/: __init__.py  analytics.py  auto_save_operations.py  data_operations.py  history_operations.py  io_operations.py  mcp_analytics_tools.py  mcp_data_tools.py  mcp_history_tools.py  mcp_io_tools.py  mcp_row_tools.py  mcp_system_tools.py  mcp_validation_tools.py  transformations.py  validation.py
src/csv_editor/utils/: validators.py
tests/: README.md  __init__.py  conftest.py  test_ai_accessibility.py  test_auto_save.py  test_basic.py  test_integration.py  test_mcp_analytics_tools.py  test_mcp_data_tools.py  test_mcp_history_tools.py  test_mcp_io_tools.py  test_mcp_registration.py  test_mcp_row_tools.py  test_mcp_system_tools.py  test_mcp_validation_tools.py  test_server.py  test_server_boot.py  test_settings.py
